--- a/app/views/pages/_instruction.html.erb
+++ b/app/views/pages/_instruction.html.erb
@@ -26,7 +26,7 @@
         <!-- /.card-body -->
       </div>
     </div>
-  <%elsif (current_student.document_verification_status == "approved") && (current_student.semester_registrations.last.present?)%>
+  <%elsif (current_student.document_verification_status == "approved") && (current_student.semester_registrations.order("created_at DESC").first.present?)%>
     <div class="col-12">
       <div class="card card-success">
         <div class="card-header">
