--- a/app/views/pages/_instruction.html.erb
+++ b/app/views/pages/_instruction.html.erb
@@ -52,7 +52,7 @@
           
         </div>
         <div class="card-footer">
-          <%= link_to "Enroll Courses", edit_semester_registration_path(current_student.semester_registrations.last.id), class: "btn btn-success"%>
+          <%= link_to "Enroll Courses", edit_semester_registration_path(current_student.semester_registrations.order("created_at DESC").first.id), class: "btn btn-success"%>
         </div>
       </div>
     </div>
