--- a/app/views/semester_registrations/edit.html.erb
+++ b/app/views/semester_registrations/edit.html.erb
@@ -112,11 +112,11 @@
 				      			</tr>
 				      			<tr>
 				      				<th>Registration Fee:</th>
-				      				<td>550 ETB</td>
+				      				<td>@fee ETB</td>
 				      			</tr>
 				      			<tr>
 				      				<th>Total:</th>
-				      				<td><b><%= @semester_registration.student.program.monthly_price + 550%> ETB</b></td>
+				      				<td><b><%= @semester_registration.student.program.monthly_price + @fee%> ETB</b></td>
 				      			</tr>
 			      			</tbody>
 			      		</table>
@@ -139,11 +139,11 @@
 				      			</tr>
 				      			<tr>
 				      				<th>Registration Fee:</th>
-				      				<td>550 ETB</td>
+				      				<td>@fee ETB</td>
 				      			</tr>
 				      			<tr>
 				      				<th>Total:</th>
-				      				<td><b><%= @semester_registration.student.program.two_monthly_price + 550%> ETB</b></td>
+				      				<td><b><%= @semester_registration.student.program.two_monthly_price + @fee%> ETB</b></td>
 				      			</tr>
 			      			</tbody>
 			      		</table>
@@ -166,11 +166,11 @@
 				      			</tr>
 				      			<tr>
 				      				<th>Registration Fee:</th>
-				      				<td>550 ETB</td>
+				      				<td>@fee ETB</td>
 				      			</tr>
 				      			<tr>
 				      				<th>Total:</th>
-				      				<td><b><%= @semester_registration.student.program.three_monthly_price + 550%> ETB</b></td>
+				      				<td><b><%= @semester_registration.student.program.three_monthly_price + @fee%> ETB</b></td>
 				      			</tr>
 			      			</tbody>
 			      		</table>
@@ -193,11 +193,11 @@
 				      			</tr>
 				      			<tr>
 				      				<th>Registration Fee:</th>
-				      				<td>550 ETB</td>
+				      				<td>@fee ETB</td>
 				      			</tr>
 				      			<tr>
 				      				<th>Total:</th>
-				      				<td><b><%= @semester_registration.student.program.full_semester_price + 550%> ETB</b></td>
+				      				<td><b><%= @semester_registration.student.program.full_semester_price + @fee%> ETB</b></td>
 				      			</tr>
 			      			</tbody>
 			      		</table>
