--- a/app/views/semester_registrations/edit.html.erb
+++ b/app/views/semester_registrations/edit.html.erb
@@ -112,7 +112,7 @@
 				      			</tr>
 				      			<tr>
 				      				<th>Registration Fee:</th>
-				      				<td>@fee ETB</td>
+				      				<td><%= @fee%> ETB</td>
 				      			</tr>
 				      			<tr>
 				      				<th>Total:</th>
@@ -139,7 +139,7 @@
 				      			</tr>
 				      			<tr>
 				      				<th>Registration Fee:</th>
-				      				<td>@fee ETB</td>
+				      				<td><%= @fee%> ETB</td>
 				      			</tr>
 				      			<tr>
 				      				<th>Total:</th>
@@ -166,7 +166,7 @@
 				      			</tr>
 				      			<tr>
 				      				<th>Registration Fee:</th>
-				      				<td>@fee ETB</td>
+				      				<td><%= @fee%> ETB</td>
 				      			</tr>
 				      			<tr>
 				      				<th>Total:</th>
@@ -193,7 +193,7 @@
 				      			</tr>
 				      			<tr>
 				      				<th>Registration Fee:</th>
-				      				<td>@fee ETB</td>
+				      				<td><%= @fee%> ETB</td>
 				      			</tr>
 				      			<tr>
 				      				<th>Total:</th>
