--- a/app/views/grade_reports/show.html.erb
+++ b/app/views/grade_reports/show.html.erb
@@ -94,12 +94,12 @@
 						  <tbody>
 						    <% @grade_report.semester_registration.course_registrations.each do |grade_report_course| %>
 						      <tr>     
-						        <td><%= course.curriculum.course_title %></td>
-						        <td><%= course.curriculum.course.course_module.module_code %></td>
-						        <td><%= course.curriculum.course.course_code %></td>
-						        <td><%= course.curriculum.credit_hour %></td>
-						        <td><%= course.student_grade.grade_in_letter %></td>
-						        <td><%= course.student_grade.grade_letter_value %></td>
+						        <td><%= grade_report_course.curriculum.course_title %></td>
+						        <td><%= grade_report_course.curriculum.course.course_module.module_code %></td>
+						        <td><%= grade_report_course.curriculum.course.course_code %></td>
+						        <td><%= grade_report_course.curriculum.credit_hour %></td>
+						        <td><%= grade_report_course.student_grade.grade_in_letter %></td>
+						        <td><%= grade_report_course.student_grade.grade_letter_value %></td>
 						      </tr>
 						    <% end %>
 						  </tbody>
