--- a/app/views/pages/_instruction.html.erb
+++ b/app/views/pages/_instruction.html.erb
@@ -232,3 +232,35 @@
       </div>
   <%end%>
 <%end%>
+
+<%if current_student.semester_registrations.where(year: 2, semester: 1).order("created_at DESC").first %>
+<div class="col-12">
+      <div class="card card-success">
+        <div class="card-header">
+          <h3 class="card-title">
+            <i class="fas fa-info-circle mr-2"></i>
+            <strong>Instruction</strong>
+
+          </h3>
+          <div class="card-tools">
+            <button type="button" class="btn btn-tool" data-card-widget="collapse">
+              <i class="fas fa-minus"></i>
+            </button>
+            <button type="button" class="btn btn-tool" data-card-widget="remove">
+              <i class="fas fa-times"></i>
+            </button>
+          </div>
+        </div>
+        <!-- /.card-header -->
+        <div class="card-body">  
+          <div class="card-body">  
+            <strong class="text-success">Click the enroll button to enroll courses.</strong>
+          </div>
+          
+        </div>
+        <div class="card-footer">
+          <%= link_to "Enroll Courses", edit_semester_registration_path(current_student.semester_registrations.where(year: 2, semester: 1).order("created_at DESC").first.id), class: "btn btn-success"%>
+        </div>
+      </div>
+    </div>
+<%end%>
