--- a/app/views/pages/_instruction.html.erb
+++ b/app/views/pages/_instruction.html.erb
@@ -1,4 +1,4 @@
-<%if !current_student.invoices.last.present?%>
+<%if !current_student.invoices.last.present? && !current_student.semester_registrations.where(year: 2).present?%>
   <% if current_student.document_verification_status == "pending"%>
     <div class="col-12">
       <div class="card card-primary">
@@ -111,7 +111,7 @@
       </div>
     </div>
   <%end%>
-<%elsif current_student.invoices.last.present?%>
+<%elsif current_student.invoices.last.present?  && !current_student.semester_registrations.where(year: 2).present?%>
   <% if current_student.invoices.last.payment_transaction.present?%>
     <% if current_student.invoices.last.payment_transaction.finance_approval_status == "pending"%>
       <div class="col-12">
@@ -233,8 +233,37 @@
   <%end%>
 <%end%>
 
-<%if current_student.semester_registrations.where(year: 2, semester: 1,finance_approval_status: "pending").order("created_at DESC").first%>
-<div class="col-12">
+
+<%if !current_student.invoices.last.present?  && current_student.semester_registrations.where(year: 2).present?%>
+  <% if current_student.document_verification_status == "pending"%>
+    <div class="col-12">
+      <div class="card card-primary">
+        <div class="card-header">
+          <h3 class="card-title">
+            <i class="fas fa-info-circle mr-2"></i>
+            <strong>Instruction</strong>
+
+          </h3>
+          <div class="card-tools">
+            <button type="button" class="btn btn-tool" data-card-widget="collapse">
+              <i class="fas fa-minus"></i>
+            </button>
+            <button type="button" class="btn btn-tool" data-card-widget="remove">
+              <i class="fas fa-times"></i>
+            </button>
+          </div>
+        </div>
+        <!-- /.card-header -->
+        <div class="card-body">  
+          <p class="text-center">
+            <strong class="text-blue">Your account has not been approved yet. Wait until the registrar approves your account. Until then you can update your informations and documents.</strong>
+          </p>
+        </div>
+        <!-- /.card-body -->
+      </div>
+    </div>
+  <%elsif (current_student.document_verification_status == "approved") && (current_student.semester_registrations.where(year: 2).order("created_at DESC").first.present?)%>
+    <div class="col-12">
       <div class="card card-success">
         <div class="card-header">
           <h3 class="card-title">
@@ -254,7 +283,7 @@
         <!-- /.card-header -->
         <div class="card-body">  
           <div class="card-body">  
-            <strong class="text-success">Click the enroll button to enroll courses.</strong>
+            <strong class="text-success">Your account has been Approved. Click the enroll button to enroll courses.</strong>
           </div>
           
         </div>
@@ -263,4 +292,179 @@
         </div>
       </div>
     </div>
+  <%elsif current_student.document_verification_status == "denied"%>
+    <div class="col-12">
+      <div class="card card-outline card-danger">
+        <div class="card-header">
+          <h3 class="card-title">
+            <i class="fas fa-info-circle mr-2"></i>
+            <strong>Instruction</strong>
+
+          </h3>
+          <div class="card-tools">
+            <button type="button" class="btn btn-tool" data-card-widget="collapse">
+              <i class="fas fa-minus"></i>
+            </button>
+            <button type="button" class="btn btn-tool" data-card-widget="remove">
+              <i class="fas fa-times"></i>
+            </button>
+          </div>
+        </div>
+        <!-- /.card-header -->
+        <div class="card-body">  
+          <p class="text-center text-danger">
+            <strong>Your account approval is denied.beacuse you did not meet the minimum requirement by the collage.</strong>
+          </p>
+        </div>
+        <!-- /.card-body -->
+      </div>
+    </div>
+  <%elsif current_student.document_verification_status == "incomplete"%>
+    <div class="col-12">
+      <div class="card card-outline card-warning">
+        <div class="card-header">
+          <h3 class="card-title">
+            <i class="fas fa-info-circle mr-2"></i>
+            <strong>Instruction</strong>
+
+          </h3>
+          <div class="card-tools">
+            <button type="button" class="btn btn-tool" data-card-widget="collapse">
+              <i class="fas fa-minus"></i>
+            </button>
+            <button type="button" class="btn btn-tool" data-card-widget="remove">
+              <i class="fas fa-times"></i>
+            </button>
+          </div>
+        </div>
+        <!-- /.card-header -->
+        <div class="card-body">  
+          <p class="text-center text-warning">
+            <strong>Your Account is Not Complete. Please edit all your relevant information. <%= link_to "Click here >>", edit_student_registration_path, class: "text-warning btn-flat"%> to edit your account.</strong>
+          </p>
+        </div>
+        <!-- /.card-body -->
+      </div>
+    </div>
+  <%end%>
+<%elsif current_student.invoices.order("created_at DESC").first.present? && current_student.semester_registrations.where(year: 2).present?%>
+  <% if current_student.invoices.order("created_at DESC").first.payment_transaction.present?%>
+    <% if current_student.invoices.order("created_at DESC").first.payment_transaction.finance_approval_status == "pending"%>
+      <div class="col-12">
+        <div class="card card-primary">
+          <div class="card-header">
+            <h3 class="card-title">
+              <i class="fas fa-info-circle mr-2"></i>
+              <strong>Instruction</strong>
+
+            </h3>
+            <div class="card-tools">
+              <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                <i class="fas fa-minus"></i>
+              </button>
+              <button type="button" class="btn btn-tool" data-card-widget="remove">
+                <i class="fas fa-times"></i>
+              </button>
+            </div>
+          </div>
+          <!-- /.card-header -->
+          <div class="card-body">  
+            <p class="text-center">
+              <strong class="text-blue">Your payment has not been approved yet. Wait until finance approves your payment. </strong>
+            </p>
+          </div>
+          <!-- /.card-body -->
+        </div>
+      </div>
+    <%elsif current_student.invoices.order("created_at DESC").first.payment_transaction.finance_approval_status == "approved"%>
+      <div class="col-12">
+        <div class="card card-success">
+          <div class="card-header">
+            <h3 class="card-title">
+              <i class="fas fa-info-circle mr-2"></i>
+              <strong>Instruction</strong>
+
+            </h3>
+            <div class="card-tools">
+              <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                <i class="fas fa-minus"></i>
+              </button>
+              <button type="button" class="btn btn-tool" data-card-widget="remove">
+                <i class="fas fa-times"></i>
+              </button>
+            </div>
+          </div>
+          <!-- /.card-header -->
+          <div class="card-body">  
+            <div class="card-body">  
+              <strong class="text-success">Your payment transfer has been Approved. Click the button to go to learning platfrom.</strong>
+            </div>
+            
+          </div>
+          <div class="card-footer">
+            <%= link_to "Go to Learning Platfrom", "https://lms.yic.edu.et", class: "btn btn-success"%>
+          </div>
+        </div>
+      </div>
+      <%= render 'student_id'%>
+    <%elsif current_student.invoices.order("created_at DESC").first.payment_transaction.finance_approval_status == "denied"%>
+      <div class="col-12">
+        <div class="card card-outline card-danger">
+          <div class="card-header">
+            <h3 class="card-title">
+              <i class="fas fa-info-circle mr-2"></i>
+              <strong>Instruction</strong>
+
+            </h3>
+            <div class="card-tools">
+              <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                <i class="fas fa-minus"></i>
+              </button>
+              <button type="button" class="btn btn-tool" data-card-widget="remove">
+                <i class="fas fa-times"></i>
+              </button>
+            </div>
+          </div>
+          <!-- /.card-header -->
+          <div class="card-body">  
+            <p class="text-center text-danger">
+              <strong>Your payment transfer approval is denied.beacuse you did not meet the minimum requirement by the collage.</strong>
+            </p>
+          </div>
+          <!-- /.card-body -->
+        </div>
+      </div>
+    <%end%>
+  <%end%>
+  <% if !current_student.invoices.order("created_at DESC").first.payment_transaction.present?%>
+      <div class="col-12">
+        <div class="card card-primary">
+          <div class="card-header">
+            <h3 class="card-title">
+              <i class="fas fa-info-circle mr-2"></i>
+              <strong>Instruction</strong>
+
+            </h3>
+            <div class="card-tools">
+              <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                <i class="fas fa-minus"></i>
+              </button>
+              <button type="button" class="btn btn-tool" data-card-widget="remove">
+                <i class="fas fa-times"></i>
+              </button>
+            </div>
+          </div>
+          <!-- /.card-header -->
+          <div class="card-body">  
+            <p class="text-center">
+              <strong class="text-blue">There is Unpaid invoice please finish submiting payment transaction form so you can be enroll class.</strong>
+            </p>
+          </div>
+          <div class="card-footer">
+            <%= link_to "Pay now", invoice_path(current_student.invoices.order("created_at DESC").first.id), class: "btn btn-primary"%>
+          </div>
+          <!-- /.card-body -->
+        </div>
+      </div>
+  <%end%>
 <%end%>
