--- a/app/views/students/registrations/_document.html.erb
+++ b/app/views/students/registrations/_document.html.erb
@@ -1,7 +1,5 @@
-<div class= "file-upload">
-	<%= f.drag_and_drop_file_field :documents do %>
-		<%= 'Drag and drop or click here to upload all the necessary documents!'%>
-	<%end%>
+<div class= "form-group">
+	<%= f.input :documents, as: :file, :input_html => {multiple: true} ,label: "upload all your documents",class: 'form-control datepicker'%>
 </div>
 <div class="row">
 	<div class="col-12 col-md-12 form-group">
@@ -12,3 +10,37 @@
 		<label class="form-check-label text-muted" for="exampleCheck1">By proceeding, I agree that all the attached documents are mine and authentic.</label>
 	</div> -->
 </div>
+
+<style>
+	.custom-file-label::after {
+	    position: absolute;
+	    top: 0;
+	    right: 0;
+	    bottom: 0;
+	    z-index: 3;
+	    display: block;
+	    height: 2.25rem;
+	    padding: 0.375rem 0.75rem;
+	    line-height: 1.5;
+	    color: #fff;
+	    background: #77cc6d !important;
+	    content: "Upload File";
+	    background-color: #e9ecef;
+	    border-left: inherit;
+	    border-radius: 0 0.25rem 0.25rem 0;
+	    border-radius: 3px;
+    	-webkit-box-shadow: 0 2px 5px 0 rgb(0 0 0 / 20%), 0 2px 10px 0 rgb(0 0 0 / 10%);
+      box-shadow: 0 2px 5px 0 rgb(0 0 0 / 20%), 0 2px 10px 0 rgb(0 0 0 / 10%);
+	}
+</style>
+<script type="text/javascript">
+
+    $('#student_documents').change(function (e) {
+        var files = [];
+        for (var i = 0; i < $(this)[0].files.length; i++) {
+            files.push($(this)[0].files[i].name);
+        }
+        $(this).next('.custom-file-label').html(files.join(', '));
+    });
+
+</script>
