--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -130,7 +130,129 @@
         
       </div>
       <div class="col-12 col-md-4">
-        <%= render 'instruction'%>
+        <% if current_student.semester_registrations.where(academic_calendar_id: 8) || current_student.semester_registrations.where(academic_calendar_id: 7)%>
+          <% !if current_student.semester_registrations.order("created_at DESC").first.invoices.order("created_at DESC").first.present? %>
+            <div class="col-12">
+              <div class="card card-success">
+                <div class="card-header">
+                  <h3 class="card-title">
+                    <i class="fas fa-info-circle mr-2"></i>
+                    <strong>Instruction</strong>
+
+                  </h3>
+                  <div class="card-tools">
+                    <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                      <i class="fas fa-minus"></i>
+                    </button>
+                    <button type="button" class="btn btn-tool" data-card-widget="remove">
+                      <i class="fas fa-times"></i>
+                    </button>
+                  </div>
+                </div>
+                <!-- /.card-header -->
+                <div class="card-body">  
+                  <div class="card-body">  
+                    <strong class="text-success">Click the enroll button to enroll courses.</strong>
+                  </div>
+
+                </div>
+                <div class="card-footer">
+                  <%= link_to "Enroll Courses", edit_semester_registration_path(current_student.semester_registrations.order("created_at DESC").first.id), class: "btn btn-success"%>
+                </div>
+              </div>
+            </div>
+          <%elsif current_student.semester_registrations.order("created_at DESC").first.invoices.order("created_at DESC").first.present? && !current_student.invoices.order("created_at DESC").first.payment_transaction.present?%>
+            <div class="col-12">
+              <div class="card card-primary">
+                <div class="card-header">
+                  <h3 class="card-title">
+                    <i class="fas fa-info-circle mr-2"></i>
+                    <strong>Instruction</strong>
+
+                  </h3>
+                  <div class="card-tools">
+                    <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                      <i class="fas fa-minus"></i>
+                    </button>
+                    <button type="button" class="btn btn-tool" data-card-widget="remove">
+                      <i class="fas fa-times"></i>
+                    </button>
+                  </div>
+                </div>
+                <!-- /.card-header -->
+                <div class="card-body">  
+                  <p class="text-center">
+                    <strong class="text-blue">There is Unpaid invoice please finish submiting payment transaction form so you can be enroll class.</strong>
+                  </p>
+                </div>
+                <div class="card-footer">
+                  <%= link_to "Pay now", invoice_path(current_student.invoices.order("created_at DESC").first.id), class: "btn btn-primary"%>
+                </div>
+                <!-- /.card-body -->
+              </div>
+            </div>
+          <%elsif current_student.semester_registrations.order("created_at DESC").first.invoices.order("created_at DESC").first.present? && current_student.invoices.order("created_at DESC").first.payment_transaction.present? && current_student.invoices.order("created_at DESC").first.payment_transaction.finance_approval_status == "pending"%>
+            <div class="col-12">
+              <div class="card card-primary">
+                <div class="card-header">
+                  <h3 class="card-title">
+                    <i class="fas fa-info-circle mr-2"></i>
+                    <strong>Instruction</strong>
+
+                  </h3>
+                  <div class="card-tools">
+                    <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                      <i class="fas fa-minus"></i>
+                    </button>
+                    <button type="button" class="btn btn-tool" data-card-widget="remove">
+                      <i class="fas fa-times"></i>
+                    </button>
+                  </div>
+                </div>
+                <!-- /.card-header -->
+                <div class="card-body">  
+                  <p class="text-center">
+                    <strong class="text-blue">Your payment has not been approved yet. Wait until finance approves your payment. </strong>
+                  </p>
+                </div>
+                <!-- /.card-body -->
+              </div>
+            </div>
+          <%elsif current_student.semester_registrations.order("created_at DESC").first.invoices.order("created_at DESC").first.present? && current_student.invoices.order("created_at DESC").first.payment_transaction.present? && current_student.invoices.order("created_at DESC").first.payment_transaction.finance_approval_status == "approved"%>
+            <div class="col-12">
+              <div class="card card-success">
+                <div class="card-header">
+                  <h3 class="card-title">
+                    <i class="fas fa-info-circle mr-2"></i>
+                    <strong>Instruction</strong>
+
+                  </h3>
+                  <div class="card-tools">
+                    <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                      <i class="fas fa-minus"></i>
+                    </button>
+                    <button type="button" class="btn btn-tool" data-card-widget="remove">
+                      <i class="fas fa-times"></i>
+                    </button>
+                  </div>
+                </div>
+                <!-- /.card-header -->
+                <div class="card-body">  
+                  <div class="card-body">  
+                    <strong class="text-success">Your payment transfer has been Approved. Click the button to go to learning platfrom.</strong>
+                  </div>
+
+                </div>
+                <div class="card-footer">
+                  <%= link_to "Go to Learning Platfrom", "https://lms.yic.edu.et", class: "btn btn-success"%>
+                </div>
+              </div>
+            </div>
+            <%= render 'student_id'%>
+          <%end%>
+        <% else%>
+          <%= render 'instruction'%>
+        <%end%>
         <div class="card card-primary">
           <div class="card-header">
             <h3 class="card-title">Basic Information</h3>
